Update media queries

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         
         <header class="header">
             <div class="header__logo-box">
+                
                 <img src="./img/logo-white.png" alt="logo" class="header__logo">
             </div>
 
@@ -52,7 +53,7 @@
             <section class="section-about">
                 <!-- utility center class -->
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
+                    <h2 class="heading-secondary u-margin-top">Exciting tours for adventurous people</h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
@@ -75,9 +76,11 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
-                            <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
-                            <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+
                         </div>
                     </div>
                 </div>
@@ -329,7 +332,13 @@
 
         <footer class="footer">
             <div class="footer__logo-box">
-                <img src="./img/logo-green-2x.png" alt="logo" class="footer__logo">
+
+                <picture class="footer__logo">
+                    <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                            media="(max-width: 37.5em)">
+                    <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" src="img/logo-green-2x.png">
+                </picture>
+
             </div>
             <div class="row">
                 <div class="col-1-of-2">
@@ -355,7 +364,7 @@
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="./img/nat-8.jpg" alt="tour photo" class="popup__img">
-                    <img src="./img/nat-9.jpg" alt="tour photo" class="popup__img">
+                    <img src="./img/nat-9.jpg" alt="tour photo" class="popup__img popup__img-none">
                 </div>
                 <div class="popup__right">
                     <a href="#section-tours" class="popup__close">&times;</a>
